2013-10-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingw-get release 0.6.2-beta-20131004-1.

	* mingw32/mingw32-mingw-get.xml:
	(mingw-get) <bin>: Add 0.6.2-beta-20131004-1 release specification;
	(mingw-get) <gui, lic>: Likewise.
	(pkginfo) <bin>: Likewise.

	* mingw32-mingw-get.xml.lzma: Regenerated and published.
	* mingw32-package-list.lzma package-list.xml.lzma: Likewise.

	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-26  Earnie Boyd  <earnie@users.sourceforge.net>

	Correct more packaging issues.

	* mingw32/mingw32-gcc4.xml: Release 4.8.1-3 to correct library version
	issues.
	* mingw32/mingw32-mpc.xml: Release 1.0.1-2 to correct library version
	issues.
	* mingw32/mingw32-mpfr.xml: Release 3.1.2-2 to correct library version
	issues.
	* mingw32/mingw32-libiconv.xml: Correct library version issues.
	* mingw32/mingw32-gettext.xml: Ditto.
	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish Xerces-C++ contributed package.

	* contrib/mingw32-xerces-c.xml: New catalogue file.
	* mingw32/mingw32-package-list.xml (mingw32-xerces-c): Add reference.
	* contrib/issue.log mingw32/issue.log common/issue.log: Updated.
	* mingw32-package-list.xml.lzma: Regenerate and publish.
	* mingw32-xerces-c.xml.lzma: Generate and publish.

2013-09-22  Earnie Boyd  <earnie@users.sourceforge.net>

	Publish mingwrt-4.0.3 and w32api-4.0.3

	* mingw32/mingw32-runtime.xml (mingwrt): Add 4.0.3 release.
	(w32api): Ditto.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-09-15  Earnie Boyd  <earnie@users.sourceforge.net>

	Publish gdb-7.6.1

	* mingw32/mingw32-gdb.xml (bin): Add gdb-7.6.1 release.
	(doc): Ditto.
	(lic): New component.
	(man): Ditto.
	(lang): Ditto.
	(info): Ditto.
	* common/issue.log mingw32/issue.log: Update accordingly.

	Publish correction for wtsapi32.h.

	* mingw32/mingw32-runtime.xml:
	(minwrt): Add 4.0.2 release.