@@ -35,7 +35,7 @@
   4dab2d86ca2203a8ac0233824c687504fda4601e 2013091000 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  1dcb5f9bedb6e78743ad8bd7306a98118ea31efc 2013092600 mingw32-gcc4.xml
+  77a7f764351934996f1fd8ab3f4adc8be52e9e4b 2013100400 mingw32-gcc4.xml
   21031079d59268339bfd7c6dc8239df214588bca 2013091501 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   4aa7a087bd74958c00f3d9fecc2410ef04a6e003 2013092600 mingw32-gettext.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   2ad6f54135ba5bb2df9075fd13e2fd299c9a4ddd 2013092600 mingw32-mpc.xml
   ccbeedc631b32ec64c86998031924e6b06a80e16 2013092600 mingw32-mpfr.xml
-  1413ad59660ad963082e7de10c31bbb725116aee 2013100400 mingw32-package-list.xml
+  1413ad59660ad963082e7de10c31bbb725116aee 2013100401 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
