@@ -210,7 +210,6 @@
     </package>
 
     <package name="mingw32-gcc-ada" alias="gcc-ada ada">
-      <affiliate group="Basic Setup" />
       <affiliate group="MinGW Compiler Suite" />
       <description lang="en" title="The GNU Ada Compiler">
         <paragraph>
@@ -228,6 +227,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
+        <affiliate group="Basic Setup" />
         <release tarname="gcc-ada-4.8.1-3-mingw32-bin.tar.lzma">
           <requires eq="gcc-ada-4.8.1-3-mingw32-dev.tar.lzma" />
           <requires eq="gcc-core-4.8.1-3-mingw32-dev.tar.lzma" />
@@ -326,7 +326,6 @@
     </package>
 
     <package name="mingw32-gcc-g++" alias="gcc-g++ g++ gcc-c++ c++">
-      <affiliate group="Basic Setup" />
       <affiliate group="MinGW Compiler Suite" />
       <description lang="en" title="The GNU C++ Compiler">
         <paragraph>
@@ -344,6 +343,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
+        <affiliate group="Basic Setup" />
         <release tarname="gcc-c++-4.8.1-3-mingw32-bin.tar.lzma" >
           <requires eq="gcc-c++-4.8.1-3-mingw32-dev.tar.lzma" />
         </release>
@@ -442,7 +442,6 @@
     </package>
 
     <package name="mingw32-gcc-fortran" alias="gcc-fortran gfortran fortran">
-      <affiliate group="Basic Setup" />
       <affiliate group="MinGW Compiler Suite" />
       <description lang="en" title="The GNU FORTRAN Compiler">
         <paragraph>
@@ -460,6 +459,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
+        <affiliate group="Basic Setup" />
         <release tarname="gcc-fortran-4.8.1-3-mingw32-bin.tar.lzma">
           <requires eq="gcc-fortran-4.8.1-3-mingw32-dev.tar.lzma" />
         </release>
@@ -584,7 +584,6 @@
     </package> -->
 
     <package name="mingw32-gcc-objc" alias="gcc-objc objc">
-      <affiliate group="Basic Setup" />
       <affiliate group="MinGW Compiler Suite" />
       <description lang="en" title="The GNU Objective-C Compiler">
         <paragraph>
@@ -607,6 +606,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
+        <affiliate group="Basic Setup" />
         <release tarname="gcc-objc-4.7.2-1-mingw32-bin.tar.lzma">
           <requires eq="gcc-core-%-mingw32-bin.tar" />
           <requires eq="libobjc-%-mingw32-dll-4.tar" />
